publish: 完善功能