@@ -14,16 +14,19 @@ import org.springframework.util.ClassUtils;
 
 import java.io.IOException;
 import java.io.Serial;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Collection;
+import java.util.List;
+import java.util.Set;
 
 /**
  * @author ziyao zhang
  * @time 2024/6/13
  */
-public final class SecurityJackson2Modules {
+public final class Jackson2Modules {
 
 
-    private static final Log logger = LogFactory.getLog(SecurityJackson2Modules.class);
+    private static final Log logger = LogFactory.getLog(Jackson2Modules.class);
 
     private static final String javaTimeJackson2ModuleClass = "com.fasterxml.jackson.datatype.jsr310.JavaTimeModule";
 
@@ -31,13 +34,13 @@ public final class SecurityJackson2Modules {
 
     static {
 
-        ClassLoader classLoader = SecurityJackson2Modules.class.getClassLoader();
+        ClassLoader classLoader = Jackson2Modules.class.getClassLoader();
 
         javaTimeJacksonPresent = ClassUtils.isPresent(javaTimeJackson2ModuleClass, classLoader);
     }
 
 
-    public SecurityJackson2Modules() {
+    public Jackson2Modules() {
     }
 
     public static void enableDefaultTyping(ObjectMapper mapper) {
@@ -112,21 +115,20 @@ public final class SecurityJackson2Modules {
         private static final Set<String> ALLOWLIST_CLASS_NAMES;
 
         static {
-            Set<String> names = new HashSet<>();
-            names.add("java.util.ArrayList");
-            names.add("java.util.Collections$EmptyList");
-            names.add("java.util.Collections$EmptyMap");
-            names.add("java.util.Collections$UnmodifiableRandomAccessList");
-            names.add("java.util.Collections$SingletonList");
-            names.add("java.util.Date");
-            names.add("java.time.Instant");
-            names.add("java.net.URL");
-            names.add("java.util.TreeMap");
-            names.add("java.util.HashMap");
-            names.add("java.util.LinkedHashMap");
-            names.add("org.springframework.security.core.context.SecurityContextImpl");
-            names.add("java.util.Arrays$ArrayList");
-            ALLOWLIST_CLASS_NAMES = Collections.unmodifiableSet(names);
+            ALLOWLIST_CLASS_NAMES = Set.of(
+                    "java.util.ArrayList",
+                    "java.util.Collections$EmptyList",
+                    "java.util.Collections$EmptyMap",
+                    "java.util.Collections$UnmodifiableRandomAccessList",
+                    "java.util.Collections$SingletonList",
+                    "java.util.Date",
+                    "java.time.Instant",
+                    "java.net.URL",
+                    "java.util.TreeMap",
+                    "java.util.HashMap",
+                    "java.util.LinkedHashMap",
+                    "org.springframework.security.core.context.SecurityContextImpl",
+                    "java.util.Arrays$ArrayList");
         }
 
         private final TypeIdResolver delegate;
